# docguard

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: dogfood.md  organization-rules.md  prose-style-rules.md  release-readiness.md  structure-rules.md  usage.md
docs/adr/: 0001-cli-first-docguard.md  0002-structured-diagnostics-and-strict-config.md  0003-organization-link-rules.md  0004-utf-8-markdown-encoding.md  0005-phase3-structure-diagnostics.md  0006-document-budget-dogfood-gate.md  0007-document-responsibility-drift-guard.md  0008-pypi-alpha-distribution.md  0009-duplicate-guidance-diagnostic.md  0010-duplicate-guidance-kind-scope.md  0011-duplicate-prose-paragraph-guidance.md  0012-prose-style-diagnostics.md  0013-pypi-distribution-name-docguard-structure.md  0014-strict-baseline-and-policy-relaxations.md  0015-forbidden-documentation-expressions.md
scripts/: wheel_smoke.py
src/docguard/: __init__.py  cli.py  config.py  constants.py  diagnostics.py  discovery.py  documentation_style.py  duplicate_guidance.py  formatters.py  graph.py  heading_order.py  markdown.py  models.py  prose_style.py  pytest_plugin.py  role_families.py  runner.py  split.py
src/docguard/rules/: __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_document_budget.py  test_document_responsibilities.py  test_documentation_style.py  test_documentation_style_baseline.py  test_documentation_style_readiness.py  test_dogfood.py  test_duplicate_guidance.py  test_duplicate_guidance_readiness.py  test_formatters.py  test_graph.py  test_graph_phase2_contract.py  test_heading_order.py  test_markdown.py  test_phase15.py  test_phase2_readiness.py  test_phase3_contract.py  test_phase3_probe.py  test_phase3_readiness.py  test_prose_style.py  test_prose_style_baseline.py  test_prose_style_readiness.py  test_pytest_plugin.py  test_release_readiness.py  test_role_families.py  test_rules.py  test_short_documents.py  test_split.py  test_unicode_support.py  test_usage_canonical_guidance.py  test_wheel_smoke.py
tests/fixtures/: sample.md
