[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docguard"
dynamic = ["version"]
description = "CLI-first Markdown structure checker for repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Docguard Contributors" }]
keywords = ["markdown", "documentation", "lint", "ci", "pytest"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/takuto-NA/docguard"
Documentation = "https://github.com/takuto-NA/docguard#readme"
Repository = "https://github.com/takuto-NA/docguard"
Issues = "https://github.com/takuto-NA/docguard/issues"
Changelog = "https://github.com/takuto-NA/docguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.0",
  "twine>=5.0",
]

[project.scripts]
docguard = "docguard.cli:main"

[project.entry-points.pytest11]
docguard = "docguard.pytest_plugin"

[tool.hatch.version]
path = "src/docguard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docguard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/docguard",
  "README.md",
  "CONTEXT.md",
  "docs",
  "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.docguard]
paths = ["README.md", "CONTEXT.md", "docs"]
index_files = ["README.md"]
require_index_reachability = true
require_duplicate_guidance_detection = true
allowed_duplicate_patterns = [
  "^Status$",
  "^Context$",
  "^Decision$",
  "^Consequences$",
]
max_document_lines = 400
max_section_lines = 120

[tool.docguard.severity]
DG-SPLIT002 = "error"

[[tool.docguard.document_types]]
name = "adr"
glob = "docs/adr/*.md"
required_headings = [
  "Status",
  "Context",
  "Decision",
  "Consequences",
]
required_front_matter_keys = ["status", "date"]
max_document_lines = 160
max_section_lines = 60
